test/types/range/hilde/countTypeError2.good
countTypeError2.chpl:1: error: can't apply '#' to a range with idxType int(8) using a count of type int(16)
countTypeError2.chpl:2: error: can't apply '#' to a range with idxType int(8) using a count of type int(32)
countTypeError2.chpl:3: error: can't apply '#' to a range with idxType int(8) using a count of type uint(16)
countTypeError2.chpl:4: error: can't apply '#' to a range with idxType int(8) using a count of type uint(32)
countTypeError2.chpl:5: error: can't apply '#' to a range with idxType int(16) using a count of type int(32)
countTypeError2.chpl:6: error: can't apply '#' to a range with idxType int(16) using a count of type uint(32)
countTypeError2.chpl:7: error: can't apply '#' to a range with idxType uint(8) using a count of type int(16)
countTypeError2.chpl:8: error: can't apply '#' to a range with idxType uint(8) using a count of type int(32)
countTypeError2.chpl:9: error: can't apply '#' to a range with idxType uint(8) using a count of type uint(16)
countTypeError2.chpl:10: error: can't apply '#' to a range with idxType uint(8) using a count of type uint(32)
countTypeError2.chpl:11: error: can't apply '#' to a range with idxType uint(16) using a count of type int(32)
countTypeError2.chpl:12: error: can't apply '#' to a range with idxType uint(16) using a count of type uint(32)
